--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "pypipq"
 version = "0.1.0"
-description = "A secure pip proxy inspired by npq - analyze packages before installation"
+description = "A secure pip proxy that analyzes Python packages before installation to detect potential security issues and risks."
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
@@ -34,6 +34,7 @@ dependencies = [
     "requests>=2.25.0",
     "packaging>=21.0",
     "tomli>=1.2.0; python_version<'3.11'",
+    
 ]
 
 [project.optional-dependencies]
