feat(validators): enhance security validations with premium options and safety fixes
- Add API key support for pepy.tech popularity checks and Snyk vulnerability scans, with informative messages for premium features
- Improve license detection in LicenseValidator by matching additional classifier patterns
- Enhance archive extraction safety in core validator for both zip and tar files
- Update suspicious imports in static analysis to reduce false positives
- Change circular dependency detection to warning instead of error
- Update GPG warning message with installation instructions
- Add bloom-filter2 dependency and update import in vulnerability database
- Include Nix development environment configuration for workspace setup

BREAKING CHANGE: Updated bloom_filter import to bloom_filter2, requiring dependency update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "portalocker>=2.0.0",
     "beautifulsoup4>=4.9.3",
     "google>=3.0.0",
+    "bloom-filter2",
 ]
 
 [project.optional-dependencies]
